--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
+        "jquery": "^3.5.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
@@ -30,9 +30,12 @@
         "@fortawesome/free-brands-svg-icons": "^5.12.1",
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/react-fontawesome": "^0.1.9",
+        "@tinymce/tinymce-react": "^3.6.0",
         "antd": "^4.0.4",
         "jwt-decode": "^2.2.0",
+        "react-html-parser": "^2.0.2",
         "react-player": "^1.15.3",
+        "react-quill": "^1.3.5",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-video-tag": "0.0.10",
