--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-player": "^1.15.3",
         "react-quill": "^1.3.5",
         "react-redux": "^7.2.0",
+        "react-responsive-carousel": "^3.2.7",
         "react-router-dom": "^5.1.2",
         "react-video-tag": "0.0.10",
         "redux": "^4.0.5",
